# gate_recorder

./: CMakeLists.txt  README.md  audiodriver.cpp  audiodriver.h  gaterecorder.cpp  gaterecorder.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
jackcpp/include/: jackaudioio.hpp  jackblockingaudioio.hpp
jackcpp/src/: jackaudioio.cpp  jackblockingaudioio.cpp
